--- a/Second tour/Second/.vscode/tasks.json
+++ b/Second tour/Second/.vscode/tasks.json
@@ -17,7 +17,7 @@
                 "panel": "new"
             },
             "options": {
-                "cwd": "C:\\Подготовка к НТИ ИРС\\Second tour\\Second"
+                "cwd": "C:\\Preparing_to_NTI_IRS\\Second tour\\Second"
             }
         }
         
