--- a/Second tour/JS artag/.vscode/launch.json
+++ b/Second tour/JS artag/.vscode/launch.json
@@ -12,7 +12,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\ttemp.js"
+            "program": "${workspaceFolder}\\temp.js",
+            "console": "integratedTerminal"
         }
     ]
 }
